# criadordecontrato

./: .dockerignore  Dockerfile  fly.toml  pyproject.toml
sresrabrownies/: app.py  criar_pdf.py  fly.toml  gerar_pdf.py  template_contrato.md
sresrabrownies/assets/: template_contrato.md
